--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Code Quiz!</title>
-        <link rel="stylesheet" type="text/css" href="assets/style.css">     
-    </head>
-    
-    <body>
-        <a href="HighScores.html">View Highscores</a>
-        <div id="wrapper">
-            <div id="timer"></div>
-            <div id="questionsdiv">
-                <h1>Code Quiz!</h1>
-                <p>Answer the following coding questions within the time limit.</p> 
-                <p>However, if you answer your questions incorrectly, 10 seconds will be removed from the timer!</p>
-                <p>The quiz will end when you complete the questions OR the timer runs out</p>
-                <p>Let the force be with you</p>
-                <ul id="choicesUl"></ul>
-                <button id="startTime">Start Quiz</button>
-            </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+
+    <title>Coding Quiz!</title>
+</head>
+
+<body>
+    <a href="scores.html">View Highscores</a>
+    <div id="wrapper">
+        <div id="currentTime"></div>
+        <div id="questionsDiv">
+            <h1>Coding Quiz!</h1>
+            <p>Answer the following coding questions within the time limit.</p>
+            <p>However, if you answer your questions incorrectly, 10 seconds will be removed from the timer!</p>
+            <P>The quiz will end when you complete the questions OR the timer runs out.</P>
+            <p>Let the force be with you!!!</p>
+            <ul id="choicesUl"></ul>
+            <button id="startQuiz">Start Quiz</button>
         </div>
-    </body>
-    
+    </div>
+
+    <script src="script.js"></script>
+
+</body>
 </html>
