--- a/scores.html
+++ b/scores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <title>HighScores</title>
+    <title>Scores</title>
 
 </head>
 
@@ -14,13 +14,13 @@
     <div id="wrapper">
         <div id="currentTime"></div>
         <div id="questionsDiv">
-            <h1>Highscores</h1>
+            <h1>Scores</h1>
             <ul id="highScore"></ul>
             <button id="goBack">Go Back</button>
             <button id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
-    <script src="scores.js"></script>
+    <script src="/scores.js"></script>
 </body>
 
 </html>
