--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="scores.html">View Highscores</a>
+    <a href="/scores.html">View Highscores</a>
     <div id="wrapper">
         <div id="currentTime"></div>
         <div id="questionsDiv">
